# Build-An-LLM-RAG-Chatbot-With-LangChain-Python

./: .env  .env.example  .gitignore  Note2.ipynb  README.md  requirements.txt
Reference/: Data.ipynb
src/: agent.py  crawl.py  main.py  pyproject.toml  seed_data.py  setup_langchain.py
src/data/: downDatasetHug.py  downDatasetHug_colab.py  sample.txt  stack.json
